--- a/Desarrollo de Portfolio/index.html
+++ b/Desarrollo de Portfolio/index.html
@@ -110,24 +110,24 @@
         <section class="sobre-mi" id="sobre-mi">
             <h2>Sobre mi</h2>
 
-            <div>
-                <h4>Victorio paskevicius</h4>
+            <div class="container__sobreMi">
+                <h3>Victorio paskevicius:</h3>
 
                 <P>Hola, soy un <b>desarrollador front-end</b> que esta buscando la oportunidad de trabajar contigo. Mi filosofia de diseño se basa en la <b>simplicidad y el minimalismo</b>, me gusta que la <b>interfaz</b> con la que el usuario interactua se <b>sencilla y clara</b>, de esta manera garantizo que tengas la mejor experiencia en la pagina, te sientas comodo y no te frustres. Para lograrlo <b>me baso en el diseño UX / UI.</b></P>
             </div>
 
-            <div>
-                <h4>Formacion:</h4>
+            <div class="container__sobreMi">
+                <h3>Formacion:</h3>
                 <p>Actualmente tengo 16 años y estoy estudiando en una escuela secundario orientada a la informatica (PRoA). Me he enriquecido intelectualmente de muchos videos informativos y cursos y practico constantemente todo lo que aprendo.</p>
             </div>
 
-            <div>
-                <h4>Enfoque de diseño:</h4>
+            <div class="container__sobreMi">
+                <h3>Enfoque de diseño:</h3>
                 <p>Dicho anteriormente, mi estilo es ser simple y minimalista, esto con el objetivo de brindar lo realmente importante y necesario al usuario, no darle demasiadas opciones y que se frustre, sino que se pueda mover con seguridad en la interfaz, y llegar a cumplir con su tarea lo antes posible y de manera eficaz.</p>
             </div>
 
-            <div>
-                <h4>Valores profesionales</h4>
+            <div class="container__sobreMi">
+                <h3>Valores profesionales:</h3>
                 <p>Soy un amante del estoicismo, es decir, estoy aprendiendo contantemente. La disciplina, trabajo duro, salir de la zona de confort, la resiliencia, son valores fundamentales y que trato de aplicar, no solo a mi labor profesional, sino tambien a mi vida, asi como los buenos habitos.</p>
             </div>
         </section>
@@ -135,35 +135,82 @@
         <section class="portfolio" id="portafolio">
             <h2>Proyectos</h2>
 
-            <a href="/Proyectos/Formulario validado JavaScript/">
-                <img src="" alt="">
-                <span>Ver proyecto</span>
-                <b>Esto es un formulario validado con JavaScript</b>
-            </a>
+            <div class="container__all_proyects">
+                <div class="container__single_proyect">
+                    <div class="img__proyecto">
+                        <img src="proyectoAppTareas.png" alt="">
+                    </div>
+                    <a target="_blank" href="/Proyectos/Apps web/App de tareas JavaScript/">
+                        <button>Ver proyecto</button>
+                    </a>
+                    <div class="descripcion__proyect">
+                        <p>Descripcion del proyecto</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.136 3.012h15.729l-1.431 16.15-6.451 1.826-6.414-1.826-1.433-16.15zm5.266 7.302-.173-2.035 7.533.002.173-1.963-9.87-.002.522 5.998h6.835l-.243 2.566-2.179.602-2.214-.605-.141-1.58H7.691l.247 3.123L12 17.506l4.028-1.08.558-6.111H9.402v-.001z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.192 3.143h15.615l-1.42 16.034-6.404 1.812-6.369-1.813L4.192 3.143zM16.9 6.424l-9.8-.002.158 1.949 7.529.002-.189 2.02H9.66l.179 1.913h4.597l-.272 2.62-2.164.598-2.197-.603-.141-1.569h-1.94l.216 2.867L12 17.484l3.995-1.137.905-9.923z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M3 3h18v18H3V3zm16.525 13.707c-.131-.821-.666-1.511-2.252-2.155-.552-.259-1.165-.438-1.349-.854-.068-.248-.078-.382-.034-.529.113-.484.687-.629 1.137-.495.293.09.563.315.732.676.775-.507.775-.507 1.316-.844-.203-.314-.304-.451-.439-.586-.473-.528-1.103-.798-2.126-.775l-.528.067c-.507.124-.991.395-1.283.754-.855.968-.608 2.655.427 3.354 1.023.765 2.521.933 2.712 1.653.18.878-.652 1.159-1.475 1.058-.607-.136-.945-.439-1.316-1.002l-1.372.788c.157.359.337.517.607.832 1.305 1.316 4.568 1.249 5.153-.754.021-.067.18-.528.056-1.237l.034.049zm-6.737-5.434h-1.686c0 1.453-.007 2.898-.007 4.354 0 .924.047 1.772-.104 2.033-.247.517-.886.451-1.175.359-.297-.146-.448-.349-.623-.641-.047-.078-.082-.146-.095-.146l-1.368.844c.229.473.563.879.994 1.137.641.383 1.502.507 2.404.305.588-.17 1.095-.519 1.358-1.059.384-.697.302-1.553.299-2.509.008-1.541 0-3.083 0-4.635l.003-.042z"></path></svg>
+                    </div>
+                </div>
 
-            <a href="/Proyectos/Apps web/App de tareas JavaScript/">
-                <img src="" alt="">
-                <span>Ver proyecto</span>
-                <b>Esto es una app web en la que puedes anotar tareas</b>
-            </a>
+                <div class="container__single_proyect">
+                    <div class="img__proyecto">
+                        <img src="proyectoFormContact.png" alt="">
+                    </div>
+                    <a target="_blank" href="/Proyectos/Formulario validado JavaScript/index.html">
+                        <button>Ver proyecto</button>
+                    </a>
+                    <div class="descripcion__proyect">
+                        <p>Descripcion del proyecto</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.136 3.012h15.729l-1.431 16.15-6.451 1.826-6.414-1.826-1.433-16.15zm5.266 7.302-.173-2.035 7.533.002.173-1.963-9.87-.002.522 5.998h6.835l-.243 2.566-2.179.602-2.214-.605-.141-1.58H7.691l.247 3.123L12 17.506l4.028-1.08.558-6.111H9.402v-.001z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.192 3.143h15.615l-1.42 16.034-6.404 1.812-6.369-1.813L4.192 3.143zM16.9 6.424l-9.8-.002.158 1.949 7.529.002-.189 2.02H9.66l.179 1.913h4.597l-.272 2.62-2.164.598-2.197-.603-.141-1.569h-1.94l.216 2.867L12 17.484l3.995-1.137.905-9.923z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M3 3h18v18H3V3zm16.525 13.707c-.131-.821-.666-1.511-2.252-2.155-.552-.259-1.165-.438-1.349-.854-.068-.248-.078-.382-.034-.529.113-.484.687-.629 1.137-.495.293.09.563.315.732.676.775-.507.775-.507 1.316-.844-.203-.314-.304-.451-.439-.586-.473-.528-1.103-.798-2.126-.775l-.528.067c-.507.124-.991.395-1.283.754-.855.968-.608 2.655.427 3.354 1.023.765 2.521.933 2.712 1.653.18.878-.652 1.159-1.475 1.058-.607-.136-.945-.439-1.316-1.002l-1.372.788c.157.359.337.517.607.832 1.305 1.316 4.568 1.249 5.153-.754.021-.067.18-.528.056-1.237l.034.049zm-6.737-5.434h-1.686c0 1.453-.007 2.898-.007 4.354 0 .924.047 1.772-.104 2.033-.247.517-.886.451-1.175.359-.297-.146-.448-.349-.623-.641-.047-.078-.082-.146-.095-.146l-1.368.844c.229.473.563.879.994 1.137.641.383 1.502.507 2.404.305.588-.17 1.095-.519 1.358-1.059.384-.697.302-1.553.299-2.509.008-1.541 0-3.083 0-4.635l.003-.042z"></path></svg>
+                    </div>
+                </div>
 
-            <a href="/Proyectos/Carruseles de imagenes/Carrusel de imagenes automatico HTML y CSS/">
-                <img src="" alt="">
-                <span>Ver proyecto</span>
-                <b>Esto es un carrusel de imagenes automatico</b>
-            </a>
+                <div class="container__single_proyect">
+                    <div class="img__proyecto">
+                        <img src="proyectoCarruselImagenesManual.png" alt="">
+                    </div>
+                    <a target="_blank" href="/Proyectos/Carruseles de imagenes/Carrusel de imagenes manual/">
+                        <button>Ver proyecto</button>
+                    </a>
+                    <div class="descripcion__proyect">
+                        <p>Descripcion del proyecto</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.136 3.012h15.729l-1.431 16.15-6.451 1.826-6.414-1.826-1.433-16.15zm5.266 7.302-.173-2.035 7.533.002.173-1.963-9.87-.002.522 5.998h6.835l-.243 2.566-2.179.602-2.214-.605-.141-1.58H7.691l.247 3.123L12 17.506l4.028-1.08.558-6.111H9.402v-.001z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.192 3.143h15.615l-1.42 16.034-6.404 1.812-6.369-1.813L4.192 3.143zM16.9 6.424l-9.8-.002.158 1.949 7.529.002-.189 2.02H9.66l.179 1.913h4.597l-.272 2.62-2.164.598-2.197-.603-.141-1.569h-1.94l.216 2.867L12 17.484l3.995-1.137.905-9.923z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M3 3h18v18H3V3zm16.525 13.707c-.131-.821-.666-1.511-2.252-2.155-.552-.259-1.165-.438-1.349-.854-.068-.248-.078-.382-.034-.529.113-.484.687-.629 1.137-.495.293.09.563.315.732.676.775-.507.775-.507 1.316-.844-.203-.314-.304-.451-.439-.586-.473-.528-1.103-.798-2.126-.775l-.528.067c-.507.124-.991.395-1.283.754-.855.968-.608 2.655.427 3.354 1.023.765 2.521.933 2.712 1.653.18.878-.652 1.159-1.475 1.058-.607-.136-.945-.439-1.316-1.002l-1.372.788c.157.359.337.517.607.832 1.305 1.316 4.568 1.249 5.153-.754.021-.067.18-.528.056-1.237l.034.049zm-6.737-5.434h-1.686c0 1.453-.007 2.898-.007 4.354 0 .924.047 1.772-.104 2.033-.247.517-.886.451-1.175.359-.297-.146-.448-.349-.623-.641-.047-.078-.082-.146-.095-.146l-1.368.844c.229.473.563.879.994 1.137.641.383 1.502.507 2.404.305.588-.17 1.095-.519 1.358-1.059.384-.697.302-1.553.299-2.509.008-1.541 0-3.083 0-4.635l.003-.042z"></path></svg>
+                    </div>
+                </div>
 
-            <a href="/Proyectos/Landing Page/">
-                <img src="" alt="">
-                <span>Ver proyecto</span>
-                <b>Esto es un blog que incluye noticias</b>
-            </a>
+                <div class="container__single_proyect">
+                    <div class="img__proyecto">
+                        <img src="/Imagenes/galeria imagenes/proyectoLandingPage.png" alt="">
+                    </div>
+                    <a target="_blank" href="/Proyectos/Landing Page/">
+                        <button>Ver proyecto</button>
+                    </a>
+                    <div class="descripcion__proyect">
+                        <p>Descripcion del proyecto</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.136 3.012h15.729l-1.431 16.15-6.451 1.826-6.414-1.826-1.433-16.15zm5.266 7.302-.173-2.035 7.533.002.173-1.963-9.87-.002.522 5.998h6.835l-.243 2.566-2.179.602-2.214-.605-.141-1.58H7.691l.247 3.123L12 17.506l4.028-1.08.558-6.111H9.402v-.001z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.192 3.143h15.615l-1.42 16.034-6.404 1.812-6.369-1.813L4.192 3.143zM16.9 6.424l-9.8-.002.158 1.949 7.529.002-.189 2.02H9.66l.179 1.913h4.597l-.272 2.62-2.164.598-2.197-.603-.141-1.569h-1.94l.216 2.867L12 17.484l3.995-1.137.905-9.923z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M3 3h18v18H3V3zm16.525 13.707c-.131-.821-.666-1.511-2.252-2.155-.552-.259-1.165-.438-1.349-.854-.068-.248-.078-.382-.034-.529.113-.484.687-.629 1.137-.495.293.09.563.315.732.676.775-.507.775-.507 1.316-.844-.203-.314-.304-.451-.439-.586-.473-.528-1.103-.798-2.126-.775l-.528.067c-.507.124-.991.395-1.283.754-.855.968-.608 2.655.427 3.354 1.023.765 2.521.933 2.712 1.653.18.878-.652 1.159-1.475 1.058-.607-.136-.945-.439-1.316-1.002l-1.372.788c.157.359.337.517.607.832 1.305 1.316 4.568 1.249 5.153-.754.021-.067.18-.528.056-1.237l.034.049zm-6.737-5.434h-1.686c0 1.453-.007 2.898-.007 4.354 0 .924.047 1.772-.104 2.033-.247.517-.886.451-1.175.359-.297-.146-.448-.349-.623-.641-.047-.078-.082-.146-.095-.146l-1.368.844c.229.473.563.879.994 1.137.641.383 1.502.507 2.404.305.588-.17 1.095-.519 1.358-1.059.384-.697.302-1.553.299-2.509.008-1.541 0-3.083 0-4.635l.003-.042z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M18.002 2.997H5.999A3.011 3.011 0 0 0 2.997 6v12.002a3.012 3.012 0 0 0 3.002 3.001h12.003a3.012 3.012 0 0 0 3.001-3.001V6a3.012 3.012 0 0 0-3.001-3.003zm-1.64 12.647c-.152.36-.389.68-.693.927a3.594 3.594 0 0 1-1.206.614c-.49.151-1.074.229-1.75.229H7.888V6.909h5.103c.943 0 1.7.213 2.267.646.569.436.854 1.082.854 1.958 0 .528-.13.983-.389 1.357-.259.373-.63.664-1.111.868v.034c.642.135 1.137.438 1.464.912.327.473.493 1.069.493 1.789 0 .405-.078.788-.225 1.147l.02.021v.003zm-2.084-2.589c-.309-.282-.739-.419-1.297-.419H9.737v3.276h3.253c.554 0 .991-.144 1.298-.435.308-.289.464-.701.464-1.229-.005-.518-.156-.919-.464-1.193h-.014.004zm-.451-2.119c.299-.251.444-.613.444-1.084 0-.526-.131-.902-.397-1.116-.264-.214-.646-.326-1.146-.326H9.727v2.898h3.001c.436.001.81-.127 1.099-.372z"></path></svg>
+                    </div>
+                </div>
 
-            <a href="/Proyectos/Porfolio/">
-                <img src="" alt="">
-                <span>Ver proyecto</span>
-                <b>Esto es un portfolio de prueba</b>
-            </a>
+                <div class="container__single_proyect">
+                    <div class="img__proyecto">
+                        <img src="/Imagenes/galeria imagenes/proyectoPortfolio.png" alt="">
+                    </div>
+                    <a target="_blank" href="/Proyectos/Porfolio/">
+                        <button>Ver proyecto</button>
+                    </a>
+                    <div class="descripcion__proyect">
+                        <p>Descripcion del proyecto</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.136 3.012h15.729l-1.431 16.15-6.451 1.826-6.414-1.826-1.433-16.15zm5.266 7.302-.173-2.035 7.533.002.173-1.963-9.87-.002.522 5.998h6.835l-.243 2.566-2.179.602-2.214-.605-.141-1.58H7.691l.247 3.123L12 17.506l4.028-1.08.558-6.111H9.402v-.001z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" style="fill: ;transform: ;msFilter:;"><path d="M4.192 3.143h15.615l-1.42 16.034-6.404 1.812-6.369-1.813L4.192 3.143zM16.9 6.424l-9.8-.002.158 1.949 7.529.002-.189 2.02H9.66l.179 1.913h4.597l-.272 2.62-2.164.598-2.197-.603-.141-1.569h-1.94l.216 2.867L12 17.484l3.995-1.137.905-9.923z"></path></svg>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="habilidades" id="habilidades">
