--- a/Proyectos/Landing Page bootstrap/html/index.html
+++ b/Proyectos/Landing Page bootstrap/html/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Web Bootstrap</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/Landing Page bootstrap/style.css">
-    <link rel="stylesheet" href="/Landing Page bootstrap/css/style.css">
+    <link rel="stylesheet" href="/Proyectos/Landing Page bootstrap/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
