Finalizando juego de piedra papel o tijera

--- a/Proyectos/Piedra Papel o Tijera/index.html
+++ b/Proyectos/Piedra Papel o Tijera/index.html
@@ -17,7 +17,7 @@
                 <div class="elementos" id="papel">
                     <img src="images/papel.png" alt="Papel">
                 </div>
-                <div class="elementos" id="tijeras">
+                <div class="elementos" id="tijera">
                     <img src="images/tijeras.png" alt="Tijeras">
                 </div>
             </div>
@@ -37,6 +37,6 @@
         <h2 id="resultado">¡Haz tu elección!</h2>
     </div>
     
-    <script src="func.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
