Subiendo proyecto completo de calculadora bsica

--- a/Proyectos/Calculadora basica/index.html
+++ b/Proyectos/Calculadora basica/index.html
@@ -13,23 +13,23 @@
         </div>
         <div class="contain_numbers">
         <div class="numbers">
-            <button id="num_buttons">1</button>
-            <button id="num_buttons">2</button>
-            <button id="num_buttons">3</button>
-            <button id="num_buttons">4</button>
-            <button id="num_buttons">5</button>
-            <button id="num_buttons">6</button>
-            <button id="num_buttons">7</button>
-            <button id="num_buttons">8</button>
-            <button id="num_buttons">9</button>
-            <button class="num_o" id="num_buttons">0</button>
+            <button class="num_buttons">1</button>
+            <button class="num_buttons">2</button>
+            <button class="num_buttons">3</button>
+            <button class="num_buttons">4</button>
+            <button class="num_buttons">5</button>
+            <button class="num_buttons">6</button>
+            <button class="num_buttons">7</button>
+            <button class="num_buttons">8</button>
+            <button class="num_buttons">9</button>
+            <button id="num_o" class="num_buttons">0</button>
         </div>
         <div class="operadores">
-            <button>+</button>
-            <button>-</button>
-            <button>x</button>
-            <button>/</button>
-            <button>=</button>
+            <button class="operador">+</button>
+            <button class="operador">-</button>
+            <button class="operador">x</button>
+            <button class="operador">/</button>
+            <button class="operador">=</button>
         </div>
         </div>
     </div>
