Subiendo proyecto de to do list con local storage

--- a/Proyectos/to-do-list/index.html
+++ b/Proyectos/to-do-list/index.html
@@ -13,7 +13,7 @@
 
           <!-- AGREGAR TAREAS -->
           <div id="container-agregar" class="col bg-light bg-gradient border rounded-4">
-            <div class=" my-5">
+            <div class="my-5">
                 <h4>Escribe las tareas que quieres agregar</h4>
             </div>
             <div class="input-group mb-3">
@@ -24,15 +24,15 @@
                 <button id="tarea" class="btn btn-primary">Agregar tarea</button>
             </div>
           </div>
+          <!-- TAREAS -->
           <div id="container-agregar" class="col bg-light bg-gradient border rounded-4">
             <div class=" my-5">
                 <h4>Tareas</h4>
             </div>
 
             <!-- ACORDION -->
-            <div id="accordion" class="accordion my-5">
-                
-            </div>
+            <div id="accordion" class="accordion my-5 container">
+              
           </div>
         </div>
       </div>
