Eliminando archivos innecesarios

--- a/Pasantia/Login-app/src/index.html
+++ b/Pasantia/Login-app/src/index.html
@@ -9,24 +9,30 @@
 <body>
     <!-- Este es el contenedor de todo el login -->
     <div class="cont_login" id="cont_login">
+        <!-- Este es el contenedor del titulo -->
         <div class="title">
             <h1>Inicio de sesión</h1>
         </div>
+        <!--  Este es el contenedor de los inputs -->
         <div class="cont_inputs">
+            <!-- Este es el contenedor del input del nombre con su label -->
             <div class="cont_name">
                 <label for="nombre">Ingresa tu nombre</label>
                 <br>
                 <input id="nombre" placeholder="Nombre" type="text">
             </div>
+            <!-- Este es el contenedor del input de la contraseña con su label -->
             <div class="cont_password">
                 <label for="contrasena">Ingresa tu contraseña</label>
                 <br>
                 <input id="contrasena" placeholder="Contraseña" type="password">
             </div>
         </div>
+        <!-- Contendor del boton submit -->
         <div class="cont_btn">
             <button class="btn_submit" id="btn_submit" type="submit">Enviar</button>
         </div>
+        <!-- Contenedor del texto que mostrara el mensaje al ejecutar la aplicacion -->
         <div class="cont_msg">
             <p id="mensaje"></p>
         </div>
